test/cases/compile_errors/comptime_coercing_int_optional_doesnt_crash.zig
const x = 0;
const y: ?usize = null;
comptime {
    x += y;
}

// error
//
// :4:10: error: expected type 'comptime_int', found '?usize'
